src/content/docs/versions/ts-sdk/0.3.x/inputs/mp4.mdx
---
title: MP4
slug: ts-sdk/0.3.x/ts-sdk/inputs/mp4
---

import { Aside, Badge, Code } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

<Badge text="Node.js" variant="tip" size="large" />

<Badge text="Browser (Client)" variant="tip" size="large" />

<Badge text="Browser (WASM)" variant="tip" size="large" />

<br />

<br />

An input type that allows Smelter to read static MP4 files.

<Aside>
  MP4 files can contain video and audio tracks encoded with various codecs. This input type supports MP4 video tracks encoded with `h264` and audio tracks encoded with `AAC`.

  If the file contains multiple audio or video tracks, only the first audio track and the first video track will be processed; all additional tracks will be ignored.
</Aside>

<Aside type="caution"> <Badge text="Browser (WASM)" variant="tip" /> runtime (via package `@swmansion/smelter-web-wasm`) currently does not support audio from mp4 files.</Aside>

## Usage

```tsx title=mp4InputExample.tsx
import Smelter from "@swmansion/smelter-node";

async function run() {
  const smelter = new Smelter();
  await smelter.init();
  await smelter.registerInput("example", {
      type: "mp4",
      serverPath: "./input.mp4"
  });
}
void run();
```

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type RegisterMp4Input = {
    type: "mp4";
    url?: string;
    serverPath?: string;
    loop?: bool;
    required?: bool;
    offsetMs?: number;
    decoderMap?: DecoderMap;
  }
  ```
</CollapsibleDetails>

Parameters for registering an MP4 file as an input.

<Aside>Exactly one of `url` or `serverPath` has to be defined.</Aside>

## Properties

### url

URL of the MP4 file.

* **Type**: `string`
* **Option availability**: <Badge text="Node.js" variant="tip" />, <Badge text="Browser (WASM)" variant="tip" />

***

### serverPath

Path to the MP4 file, specifying its location on the server where the Smelter instance is deployed.

* **Type**: `string`
* **Option availability**: <Badge text="Node.js" variant="tip" />

***

### loop

Specifies whether the input should be played in a loop.

* **Type**: `boolean`
* **Default value**: `false`
* **Option availability**: <Badge text="Node.js" variant="tip" />

***

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `boolean`
* **Default value**: `false`
* **Option availability**: <Badge text="Node.js" variant="tip" />

***

### offsetMs

Offset in milliseconds relative to the pipeline start (start request). If unspecified, the stream synchronizes based on the delivery time of the initial frames.

* **Type**: `number`
* **Option availability**: <Badge text="Node.js" variant="tip" />

***

### decoderMap

Assigns which decoder should be used for media encoded with a specific codec.

* **Type**: [`DecoderMap`](#decodermap)

## DecoderMap

Maps codecs to the provided decoders.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type DecoderMap = {
    h264?: 'ffmpeg_h264' | 'vulkan_h264';
  };
  ```
</CollapsibleDetails>

### Properties

#### h264

H264 decoder configuration.

* **Type**: `'ffmpeg_h264' | 'vulkan_h264'`
* **Default value**: If available `vulkan_h264` will be used, otherwise `ffmpeg_h264`
* **Supported values**:
  * `"ffmpeg_h264"` - Software H264 decoder based on FFmpeg.
  * `"vulkan_h264"` (<Badge text="Required feature: vk-video" variant="note" />) - Hardware decoder. Requires GPU that supports Vulkan Video decoding.
